--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ text-align: center;
     <h3>Links to ALA Files:</h3>
     <a href="task1.html">Link to ALA 1</a>
     <a href="https://dhruvmakwana1.github.io/ala2/">Link to ALA 2</a>
-    <a href="">Link to ALA 3</a>
+    <a href=" https://dhruvmakwana1.github.io/dwala3/">Link to ALA 3</a>
         </div>
     </div>
 
